# task-runner-detector

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  build.rs  dist-workspace.toml
.claude/: settings.local.json
.github/workflows/: release.yml
.hooks/: pre-commit  pre-push
fixtures/: Makefile  first_render.txt  justfile  package.json
fixtures/apps/mobile/: pubspec.yaml
fixtures/apps/web/: package.json
fixtures/services/api/: .pdm-python  Cargo.toml  pyproject.toml
fixtures/services/backend/: pom.xml
fixtures/services/dotnet-api/: Api.csproj  Program.cs
scripts/: smoke-test.sh
src/: backend.rs  lib.rs  main.rs  messages.rs  registry.rs  render.rs  scanner.rs  ui.rs
src/parsers/: cargo_toml.rs  csproj.rs  deno_json.rs  justfile.rs  makefile.rs  mod.rs  package_json.rs  pom_xml.rs  pubspec_yaml.rs  pyproject_toml.rs  turbo_json.rs
tests/: interactive.rs
wix/: main.wxs
