[package]
name = "task-runner-detector"
version = "0.1.0"
edition = "2021"
description = "Detect and run tasks from various task runner config files"
license = "MIT"
rust-version = "1.75"

[[bin]]
name = "task"
path = "src/main.rs"

[dependencies]
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.9"
serde-saphyr = "0.0.14"

# Directory traversal
ignore = "0.4"

# Error handling
thiserror = "2"

# Parsing
makefile-lossless = "0.3"
just = "1"

# CLI
clap = { version = "4", features = ["derive"] }
console = "0.16"
crossterm = "0.29"

[dev-dependencies]
tempfile = "3"
