[package]
name = "task-runner-detector"
version = "0.1.0"
edition = "2021"
description = "Detect and run tasks from various task runner config files"
license = "MIT"
rust-version = "1.75"
repository = "https://github.com/elob/task-runner-detector"
homepage = "https://github.com/elob/task-runner-detector"
readme = "README.md"
keywords = ["task-runner", "cli", "npm", "makefile", "monorepo"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "task"
path = "src/main.rs"

[dependencies]
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.9"
serde-saphyr = "0.0.14"

# Directory traversal
ignore = "0.4"

# Error handling
thiserror = "2"

# Parsing
makefile-lossless = "0.3"
just = "1"

# Fuzzy matching
nucleo-matcher = "0.3"

# Input handling
tui-input = { version = "0.11", features = ["crossterm"] }

# CLI
clap = { version = "4", features = ["derive"] }
console = "0.16"
crossterm = "0.29"

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = true
strip = true
codegen-units = 1

[package.metadata.release]
tag-prefix = "v"
tag-message = "Release {{version}}"
pre-release-commit-message = "chore: release {{version}}"
# Run fmt check, clippy, and tests before releasing
pre-release-hook = ["sh", "-c", "cargo fmt --check && cargo clippy -- -D warnings && cargo test"]
