[package]
name = "task-runner-detector"
version = "0.2.0"
edition = "2021"
authors = ["Olle Bröms"]
description = "Detect and run tasks from various task runner config files"
license = "MIT"
rust-version = "1.75"
repository = "https://github.com/elob/task-runner-detector"
homepage = "https://github.com/elob/task-runner-detector"
readme = "README.md"
keywords = ["task-runner", "cli", "npm", "makefile", "monorepo"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "task"
path = "src/main.rs"

[dependencies]
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.9"
serde-saphyr = "0.0.14"
quick-xml = { version = "0.37", features = ["serialize"] }

# Directory traversal
ignore = "0.4"

# Error handling
thiserror = "2"

# Parsing
just = "1"

# Fuzzy matching
nucleo-matcher = "0.3"

# Input handling
tui-input = { version = "0.11", features = ["crossterm"] }

# CLI
clap = { version = "4", features = ["derive"] }
console = "0.16"
crossterm = "0.29"

[dev-dependencies]
tempfile = "3"
expectrl = "0.7"

[profile.release]
lto = true
strip = true
codegen-units = 1

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[package.metadata.release]
tag-prefix = ""
tag-message = "Release {{version}}"
pre-release-commit-message = "chore: release {{version}}"
# Run fmt check, clippy, and tests before releasing
pre-release-hook = ["sh", "-c", "cargo fmt --check && cargo clippy -- -D warnings && cargo test"]

[package.metadata.wix]
upgrade-guid = "2C7B60A3-C012-4CA8-B417-3A3526B59152"
path-guid = "C662BEE8-943D-42A5-AFC2-362835782D60"
license = false
eula = false
